<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_matematik"
            android:icon="@drawable/calculator"
            android:title="@string/menu_matematik" />
        <item
            android:id="@+id/nav_fizik"
            android:icon="@drawable/science"
            android:title="@string/menu_fizik" />
        <item
            android:id="@+id/nav_kimya"
            android:icon="@drawable/lab"
            android:title="@string/menu_kimya" />
        <item
            android:id="@+id/nav_tip"
            android:icon="@drawable/pill"
            android:title="@string/menu_tip" />

        <item
            android:id="@+id/nav_tarih"
            android:icon="@drawable/scroll"
            android:title="@string/menu_tarih" />

        <item
            android:id="@+id/nav_cografya"
            android:icon="@drawable/world"
            android:title="@string/menu_cografya" />

    </group>

    <item android:title="Ayrıntılar">
        <menu>
            <item
                android:id="@+id/nav_proje"
                android:icon="@drawable/project"
                android:title="@string/menu_proje" />

        </menu>
    </item>

</menu>
