<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cesebe.turkbilimadamlari.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_matematik"
        android:name="com.cesebe.turkbilimadamlari.ui.fragmentmatematik.fragment_matematik"
        android:label="@string/menu_matematik"
        tools:layout="@layout/fragment_matematik" />

    <fragment
        android:id="@+id/nav_fizik"
        android:name="com.cesebe.turkbilimadamlari.ui.fragmentfizik.fragment_fizik"
        android:label="@string/menu_fizik"
        tools:layout="@layout/fragment_fizik" />

    <fragment
        android:id="@+id/nav_kimya"
        android:name="com.cesebe.turkbilimadamlari.ui.fragmentkimya.fragment_kimya"
        android:label="@string/menu_kimya"
        tools:layout="@layout/fragment_kimya" />

    <fragment
        android:id="@+id/nav_tip"
        android:name="com.cesebe.turkbilimadamlari.ui.tipfragment.tip_fragment"
    android:label="@string/menu_tip"
        tools:layout="@layout/fragment_tip" />

    <fragment
        android:id="@+id/nav_tarih"
        android:name="com.cesebe.turkbilimadamlari.ui.fragmenttarih.fragment_tarih"
        android:label="@string/menu_tarih"
        tools:layout="@layout/fragment_tarih_layout" />

    <fragment
        android:id="@+id/nav_cografya"
        android:name="com.cesebe.turkbilimadamlari.ui.fragmentcografya.fragment_cografya"
        android:label="@string/menu_cografya"
        tools:layout="@layout/fragment_cografya_layout" />

    <fragment
        android:id="@+id/nav_proje"
        android:name="com.cesebe.turkbilimadamlari.ui.fragmentproje.fragment_proje"
        android:label="@string/menu_proje"
        tools:layout="@layout/fragment_proje" />




</navigation>